dist/src/main/kubernetes/manifests/core-stack/metasfresh-core-stack-deploy_demouser_demo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "metasfresh-core-stack-demouser-demo"
  labels:
    de.metas.deployment.type: metasfresh-core-stack
    de.metas.deployment.user: "demouser"
    de.metas.deployment.stage: "demo"
    de.metas.deployment.name: "metasfresh-core-stack-demouser-demo"
  namespace: "default"
# can be created with kubectl create namespace demo"
#  namespace: "demo"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        de.metas.deployment.type: metasfresh-core-stack
        de.metas.deployment.user: "demouser"
        de.metas.deployment.stage: "demo"
    spec:
      containers:
#
# metasfresh-app
      - env:
        - name: METASFRESH_HOME
          value: /opt/metasfresh
        - name: DB_HOST
          value: "metasfresh-postgresql-demouser-demo"
        - name: DB_PASSWORD
          value: metasfresh
        - name: APP_HOST
          value: localhost
        - name: ES_HOST
          value: localhost
        - name: ES_PORT
          value: '9300'
        - name: ADMIN_HOST
          value: metasfresh-admin
        - name: ADMIN_PORT
          value: '9090'
        name: app
        image: docker.metasfresh.com/metasfresh/metasfresh-dist-app:master_LATEST
        imagePullPolicy: Always
        ports:
          - containerPort: 61616 # activemq
          - containerPort: 8282  # embedded tomcat
          - containerPort: 8788  # remote debugging
        resources: 
          requests:
            memory: 1200M
        volumeMounts:
        - mountPath: /etc/localtime
          name: host-localtime
          readOnly: true
        - mountPath: /etc/timezone
          name: host-timezone
          readOnly: true
#
# metasfresh-webui-api
      - env:
        - name: DB_HOST
          value: "metasfresh-postgresql-demouser-demo"
        - name: APP_HOST
          value: localhost
        - name: ES_HOST
          value: localhost
        - name: ES_PORT
          value: '9300'
        - name: ADMIN_HOST
          value: metasfresh-admin
        - name: ADMIN_PORT
          value: '9090'          
        name: webapi
        image: docker.metasfresh.com/metasfresh/metasfresh-webui-api-dev:master_LATEST
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 8789 # remote debugging
        resources: 
          requests:
            memory: 600M
        volumeMounts:
        - mountPath: /etc/localtime
          name: host-localtime
          readOnly: true
        - mountPath: /etc/timezone
          name: host-timezone
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: host-localtime
        hostPath:
          path: /etc/localtime
      - name: host-timezone
        hostPath:
          path: /etc/timezone
