dist/src/main/kubernetes/manifests/core-stack/metasfresh-core-stack-svc_demouser_demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: "metasfresh-core-stack-demouser-demo"
  labels:
    de.metas.deployment.type: metasfresh-core-stack
    de.metas.deployment.stage: "demo"
    de.metas.deployment.user: "demouser"
  namespace: default
spec:
  ports:
  - name: webapi-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: webapi-remote-debug
    port: 8789
    protocol: TCP
    targetPort: 8789    
  - name: activemq
    port: 61616
    protocol: TCP
    targetPort: 61616
  - name: app-http
    port: 8282
    protocol: TCP
    targetPort: 8282
  - name: app-remote-debug
    port: 8788
    protocol: TCP
    targetPort: 8788
  selector:
    de.metas.deployment.stage: "demo"
    de.metas.deployment.type: metasfresh-core-stack
    de.metas.deployment.user: "demouser"
  sessionAffinity: None
# ClusterIP is the default; we use it because we don't want to make the service available to the outside (we have the ingress for that)
# see https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services---service-types
  type: ClusterIP
